--- a/style.css
+++ b/style.css
@@ -451,3 +451,81 @@ margin-bottom: 20px;
 
 
  /* next-target section ends hare */
+ /* feedback section start hare */
+ #feedback-section{
+  width: 1140px;
+height: 313px;
+margin: 50px auto 0px;
+border: 2px solid darkorchid;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-image: url(/images/handshake-img.jpg);
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
+border-radius: 16px;
+
+background-color: rgba(0, 0, 0, 0.4);
+background-blend-mode: overlay;
+ }
+ .feedback-section-content{
+  width: 1044px;
+height: 185px;
+margin: 0 auto;
+border: 2px solid red;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 0px 100px 0px 100px;
+ }
+ .feedback-section-content h2{
+  color: rgb(255, 255, 255);
+font-size: 32px;
+font-weight: 700;
+line-height: 36px;
+letter-spacing: 0%;
+ }
+ .feedback-section-content P{
+  color: rgb(255, 255, 255);
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+
+ }
+ .message-box{
+  margin-top: 24px;
+ }
+input[type="text"]{
+border: 1px solid rgba(13, 19, 33, 0.15);
+border-radius: 8px;
+background: rgb(255, 255, 255);
+color: rgba(13, 19, 33, 0.4);
+font-size: 16px;
+font-weight: 400;
+line-height: 19px;
+letter-spacing: 0%;
+padding: 20px;
+width: 548px;
+height: 57px;
+border: none;
+ }
+  
+
+ .feedback-button{
+  color: rgb(13, 19, 33);
+font-size: 20px;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+text-align: center;
+border-radius: 8px;
+background: rgb(255, 255, 255);
+padding: 10px;
+ }
+
+
+ /* feedback section ends hare */
