fixing some border issue successfully

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   max-width: 1440px;
 font-family: "Azeret Mono", monospace;
 font-style: normal;
-border: 2px solid red;
+/* border: 2px solid red; */
 margin: 0 auto;
 
  }
@@ -30,7 +30,7 @@ margin: 0 auto;
 
  .nav-menu{
   width:1140px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -74,7 +74,7 @@ padding: 17px 24px;
   width: 998px;
   height: 582px;
   margin: 0 auto;
-  border: 3px solid green;
+  /* border: 3px solid green; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -102,7 +102,6 @@ text-align: center;
  }
  .contact-button{
   color: rgb(255, 255, 255);
-font-family: Azeret Mono;
 font-size: 20px;
 font-weight: 600;
 line-height: 23px;
@@ -128,20 +127,19 @@ padding: 18px;
  .why-development-container{
   width: 946px;
 height: 1233px;
-border: 2px solid red;
+/* border: 2px solid red; */
 margin: 0px auto;
  }
  .why-development-title{
   width: 90%;
   height: 113px;
   margin: 0 auto;
-  border: 2px solid hotpink;
+  /* border: 2px solid hotpink; */
   text-align: center;
  
  }
 .why-development-title h3{
   color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 32px;
 font-weight: 800;
 line-height: 37px;
@@ -149,7 +147,6 @@ letter-spacing: 0%;
 }
 .why-development-title p{
   color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 400;
 line-height: 26px;
@@ -183,7 +180,6 @@ text-align: left;
 }
 .text-content p{
   color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 400;
 line-height: 26px;
@@ -195,7 +191,6 @@ margin-bottom: 10px;
 }
 .learn-more-button{
   color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 20px;
 font-weight: 600;
 line-height: 23px;
@@ -216,7 +211,7 @@ padding: 10px;
  #inspiration-section{
   width: 1140px;
   height: 775px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   margin: 0 auto;
   margin-top: 60px;
  }
@@ -224,7 +219,7 @@ padding: 10px;
   width: 852px;
 height: 150px;
 margin: 0 auto;
-border: 2px solid purple;
+/* border: 2px solid purple; */
 text-align: center;
  }
  .inspiration-section-title h2{
@@ -236,7 +231,6 @@ letter-spacing: 0%;
  }
  .inspiration-section-title p{
   color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 400;
 line-height: 26px;
@@ -260,14 +254,14 @@ margin-top: 24px;
   width: 1140px;
 height: 660px;
 margin: 0 auto;
-border: 2px solid blueviolet;
+/* border: 2px solid blueviolet; */
 margin-top: 100px;
  }
 .current-target-title{
   width: 852px;
 height: 150px;
 margin: 0 auto;
-border: 2px solid cornflowerblue;
+/* border: 2px solid cornflowerblue; */
 text-align: center;
 }
 .current-target-title h2{
@@ -289,14 +283,14 @@ margin-top: 20px;
   margin-top: 48px;
   width: 1140px;
 height: 400px;
-border: 2px solid yellow;
+/* border: 2px solid yellow; */
 display: flex;
 gap: 24px;
 }
 .card-item1{
   width: 364px;
 height: 350px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   margin: 0 auto;
   padding: 40px;
   border-radius: 16px;
@@ -324,7 +318,7 @@ margin-bottom: 10px;
 .card-item2{
   width: 364px;
 height: 350px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   margin: 0 auto;
   padding: 40px;
  border-radius: 16px;
@@ -352,7 +346,7 @@ margin-bottom: 10px;
 .card-item3{
   width: 364px;
 height: 350px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   margin: 0 auto;
   padding: 40px;
  border-radius: 16px;
@@ -391,7 +385,7 @@ margin-top: 10px;
  #next-target-section{
   width: 1140px;
 height: 1000px;
-border: 2px solid green;
+/* border: 2px solid green; */
 margin: 0 auto;
 
  }
@@ -399,7 +393,7 @@ margin: 0 auto;
   width: 946px;
 height: 150px;
 margin: 0 auto;
-border: 2px solid red;
+/* border: 2px solid red; */
 text-align: center;
  }
  .next-target-title h2{
@@ -456,7 +450,7 @@ margin-bottom: 20px;
   width: 1140px;
 height: 313px;
 margin: 50px auto 0px;
-border: 2px solid darkorchid;
+/* border: 2px solid darkorchid; */
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -474,7 +468,7 @@ background-blend-mode: overlay;
   width: 1044px;
 height: 185px;
 margin: 0 auto;
-border: 2px solid red;
+/* border: 2px solid red; */
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -534,7 +528,7 @@ padding: 10px;
   width: 1140px;
 height: 100px;
 margin: 30px auto;
-border: 2px solid red;
+/* border: 2px solid red; */
 display: flex;
 justify-content: space-between;
 align-items: center;
